syntax = "proto3";
package DomainServices.DocumentOnSAService.SetProcessingDateInSbQueues;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";

message SetProcessingDateInSbQueuesRequest {
	
	int64 TaskId = 1;

	int64 CaseId = 2;
}
